--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -52,6 +52,8 @@
     <Compile Include="GameBoardTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomPlayerTests.cs" />
+    <Compile Include="GameStateTests.cs" />
+    <Compile Include="DeckTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
