Create new Player type which is easier to test with
This Players always plays the first (oldest) card in their hand

--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="RandomPlayerTests.cs" />
     <Compile Include="GameStateTests.cs" />
     <Compile Include="DeckTests.cs" />
+    <Compile Include="LeastRecentCardPlayerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
