--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GameStateTests.cs" />
     <Compile Include="DeckTests.cs" />
     <Compile Include="Players\LeastRecentCardPlayerTests.cs" />
+    <Compile Include="GameEngineTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
