--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameBoardTests.cs" />
-    <Compile Include="Players\GreatestDistanceSingleCardPlayerTests.cs" />
+    <Compile Include="Players\GreedyPlayerTests.cs" />
     <Compile Include="Players\PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Players\RandomPlayerTests.cs" />
@@ -59,6 +59,7 @@
     <Compile Include="Players\LeastRecentCardPlayerTests.cs" />
     <Compile Include="GameEngineTests.cs" />
     <Compile Include="TestUtilities.cs" />
+    <Compile Include="PlayerHandTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
