GameState is only state. Game is pure functions.
In order to help address several future concerns, we want to have a (vaguely) immutable representation of the state of the board. In addition, we want to be able to produce the next state given a play. This is important so that algorithms that wish to tentatively look ahead assuming they've made a particular play may do so without altering the game in progress.

--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -53,10 +53,9 @@
     <Compile Include="GameBoardTests.cs" />
     <Compile Include="Players\EpsilonGreedyPlayerTests.cs" />
     <Compile Include="Players\GreedyPlayerTests.cs" />
-    <Compile Include="Players\PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Players\RandomPlayerTests.cs" />
-    <Compile Include="GameStateTests.cs" />
+    <Compile Include="GameTests.cs" />
     <Compile Include="DeckTests.cs" />
     <Compile Include="Players\LeastRecentCardPlayerTests.cs" />
     <Compile Include="GameEngineTests.cs" />
