SearchNode and GreedyBestFirstAgent
The primary goal here was to implement GreedyBestFirstSearch. To do that, we
needed a way to store our game tree traversal, hence SearchNode. In order to
have a bit of added safety around gameplay, a StateMismatchException will be
thrown if the GreedyBestFirstAgent is ever asked to make a play that doesn't
correspond to what it believes the state of the board should be.

--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agents\GreedyBestFirstAgentTests.cs" />
     <Compile Include="ParliamentTests.cs" />
     <Compile Include="GameStateTests.cs" />
     <Compile Include="SeededRandomTests.cs" />
