beam agent tests to csproj

--- a/GameEngineTests/GameEngineTests.csproj
+++ b/GameEngineTests/GameEngineTests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Agents\AStarAgentTests.cs" />
+    <Compile Include="Agents\BeamAgentTests.cs" />
     <Compile Include="Agents\BreadthFirstAgentTests.cs" />
     <Compile Include="Agents\ExpectMaxAgentTests.cs" />
     <Compile Include="Agents\GreedyBestFirstAgentTests.cs" />
